--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -19,7 +19,7 @@ profiles:
             chartPath: k8s/helm
             setValueTemplates:
               image.repository: "{{.IMAGE_NAME}}"
-              image.tag: "{{.DIGEST}}"
+              image.tag: "{{.DIGEST_HEX}}"
             valuesFiles:
               - k8s/values.yaml
   - name: run
